--- a/Dabewallah.css
+++ b/Dabewallah.css
@@ -372,3 +372,9 @@ text-align: left;;
     margin-top: 100px;
   }
 }
+
+.footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
